--- a/Jordy Ruiz - AIFS Lesson 2 ML and AI Algorithms.ipynb
+++ b/Jordy Ruiz - AIFS Lesson 2 ML and AI Algorithms.ipynb
@@ -5,7 +5,7 @@
    "id": "e974b5c4",
    "metadata": {},
    "source": [
-    "# Assignment #1: Predictive Modeling - probablity of default"
+    "# Predictive Modeling - probablity of default"
    ]
   },
   {
